5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1635_2711.log
== TEST (2019-04-14 21:07:28) 
-- CODE:
cash = float(input("Quanto dinheiro o aluno tem? "))
ru = int(input("Qual a quantidade de RU que desejas? "))
cru = float(input("Qual o custo do ru?"))
passe = int(input("Quantos passes de onibus desejas? "))
cpasse = float(input("Qual o valor dos passes? "))

gasto = ru*cru + passe*cpasse

if(cash >= gasto):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:08:28) 
-- CODE:
cash = float(input("Quanto dinheiro o aluno tem? "))
ru = int(input("Qual a quantidade de RU que desejas? "))
cru = float(input("Qual o custo do ru?"))
passe = int(input("Quantos passes de onibus desejas? "))
cpasse = float(input("Qual o valor dos passes? "))

gasto = ru*cru + passe*cpasse

if(cash >= gasto):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:08:45) 
-- CODE:
cash = float(input("Quanto dinheiro o aluno tem? "))
ru = int(input("Qual a quantidade de RU que desejas? "))
cru = float(input("Qual o custo do ru?"))
passe = int(input("Quantos passes de onibus desejas? "))
cpasse = float(input("Qual o valor dos passes? "))

gasto = ru*cru + passe*cpasse

if(cash >= gasto):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.178037
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
